# QuarkGLEngine

./: .gitignore  CMakeLists.txt  README.md
data/: level1.txt  level3.txt
shaders/: fragment.glsl  vertex.glsl
src/: Engine.h  InputManager.h  Level.cpp  Level.h  Light.cpp  Light.h  Object.cpp  Object.h  PhysicsObject.cpp  PhysicsObject.h  Platformer.cpp  Platformer.h  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  TextureCache.cpp  TextureCache.h  glad.c  main.cpp
